mash: Create ChromeLauncherController on session activation, like cash.

Bug: 764394
Change-Id: I985c32656a0b2bfdaa29fe31e9d5ca8df3fa1326