chrome/browser/chromeos/chrome_browser_main_chromeos.h
@@ -20,10 +20,6 @@ namespace lock_screen_apps {
 class StateController;
 }
 
-namespace session_manager {
-class SessionManager;
-}
-
 namespace arc {
 class ArcServiceLauncher;
 }
@@ -50,6 +46,7 @@ class ExternalLoader;
 }
 
 namespace internal {
+class ChromeLauncherControllerInitializer;
 class DBusServices;
 class SystemTokenCertDBInitializer;
 }
@@ -94,7 +91,8 @@ class ChromeBrowserMainPartsChromeos : public ChromeBrowserMainPartsLinux {
   std::unique_ptr<internal::SystemTokenCertDBInitializer>
       system_token_certdb_initializer_;
 
-  std::unique_ptr<session_manager::SessionManager> session_manager_;
+  std::unique_ptr<internal::ChromeLauncherControllerInitializer>
+      chrome_launcher_controller_initializer_;
 
   std::unique_ptr<ShutdownPolicyForwarder> shutdown_policy_forwarder_;
 
