chrome/browser/ui/views/ash/chrome_browser_main_extra_parts_ash.h
@@ -12,10 +12,6 @@ FASTVC-BENCH-CORPUS:chromium-main-v1-943b94ae-1c74-4335-94fa-ceb4d277cea8
 #include "chrome/browser/chrome_browser_main_extra_parts.h"
 #include "chrome/common/features.h"
 
-namespace ash {
-class ShelfModel;
-}
-
 namespace aura {
 class UserActivityForwarder;
 }
@@ -26,7 +22,6 @@ class UserActivityDetector;
 
 class AshInit;
 class CastConfigClientMediaRouter;
-class ChromeLauncherController;
 class ChromeNewWindowClient;
 class ChromeShellContentState;
 class LockScreenClient;
@@ -71,11 +66,6 @@ class ChromeBrowserMainExtraPartsAsh : public ChromeBrowserMainExtraParts {
   std::unique_ptr<VpnListForwarder> vpn_list_forwarder_;
   std::unique_ptr<AshInit> ash_init_;
   std::unique_ptr<LockScreenClient> lock_screen_client_;
-
-  // These are only used in Mash; corresponding instances are owned by Ash's
-  // ShelfController and ChromeShellDelegate in classic Ash.
-  std::unique_ptr<ash::ShelfModel> chrome_shelf_model_;
-  std::unique_ptr<ChromeLauncherController> chrome_launcher_controller_;
 
   // Used only for mash.
   std::unique_ptr<ui::UserActivityDetector> user_activity_detector_;
